added about page

--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -6,7 +6,7 @@
       <h1 class="flex-none">
         What is the HomeCloud?
       </h1>
-      <p>HomeCloud is a cluster of raspberry pi servers that come together ot manage your home network. Follow the series
+      <p>HomeCloud is a cluster of raspberry pi servers that come together to manage your home network. Follow the series
         below to set one in your home that can block nasty ads,
         force safe search, play minecraft, and a lot more - limited only by your imagination! The cluster is based on K3s,
         so there's that to learn too.</p>
